@@ -1,0 +1,90 @@
+#ifndef ALIGN_HPP
+#define ALIGN_HPP
+
+#include <boost/type_traits/alignment_traits.hpp>
+#include "myassert.h"
+
+#ifdef TEST
+#include "test.hpp"
+#endif
+
+template <class T>
+T *align(T *p)
+{
+    const unsigned align=boost::alignment_of<T>::value;
+    const unsigned align_mask=(align-1);
+
+    Assert2((align_mask & align), ==0); // only works for power-of-2 alignments.
+    char *cp=(char *)p;
+    cp += align-1;
+    cp -= (align_mask & (unsigned)cp);
+//    DBP4(sizeof(T),align,(void*)p,(void*)cp);
+    return (T*)cp;
+}
+
+template <class T>
+T *align_down(T *p)
+{
+    const unsigned align=boost::alignment_of<T>::value;
+    const unsigned align_mask=(align-1);
+//    DBP3(align,align_mask,align_mask & align);
+    //      unsigned & ttop(*(unsigned *)&p); //FIXME: do we need to warn compiler about aliasing here?
+//            ttop &= ~align_mask;
+    //return p;
+    Assert2((align_mask & align), == 0); // only works for power-of-2 alignments.
+    unsigned diff=align_mask & (unsigned)p; //= align-(ttop&align_mask)
+    return (T*)((char *)p - diff);
+}
+
+template <class T>
+bool is_aligned(T *p)
+{
+    //      unsigned & ttop(*(unsigned *)&p); //FIXME: do we need to warn compiler about aliasing here?
+    const unsigned align=boost::alignment_of<T>::value;
+    const unsigned align_mask=(align-1);
+    return !(align_mask & (unsigned)p);
+}
+
+
+#ifdef TEST
+#include "test.hpp"
+BOOST_AUTO_UNIT_TEST( TEST_ALIGN )
+{
+    unsigned *p;
+    p=(unsigned *)0x15;
+    BOOST_CHECK_EQUAL(::align(p),(unsigned *)0x18);
+    BOOST_CHECK_EQUAL(::align_down(p),(unsigned *)0x14);
+    BOOST_CHECK(!is_aligned(p));
+
+    p=(unsigned *)0x16;
+    BOOST_CHECK_EQUAL(::align(p),(unsigned *)0x18);
+    BOOST_CHECK_EQUAL(::align_down(p),(unsigned *)0x14);
+    BOOST_CHECK(!is_aligned(p));
+
+    p=(unsigned *)0x17;
+    BOOST_CHECK_EQUAL(::align(p),(unsigned *)0x18);
+    BOOST_CHECK_EQUAL(::align_down(p),(unsigned *)0x14);
+    BOOST_CHECK(!is_aligned(p));
+
+    p=(unsigned *)0x28;
+    BOOST_CHECK_EQUAL(::align(p),p);
+    BOOST_CHECK_EQUAL(::align_down(p),p);
+    BOOST_CHECK(is_aligned(p));
+
+    const unsigned N=200;
+    const unsigned J=sizeof(int);
+    for (unsigned i=0;i<N;++i) {
+        unsigned word=i/J;
+        unsigned wordup=((i%J) ? word+1 : word);
+        int *p0=0;
+        BOOST_CHECK_EQUAL(align((int *)i),p0+wordup);
+        BOOST_CHECK_EQUAL(align_down((int *)i),p0+word);
+        BOOST_CHECK_EQUAL(align((char*)i),(char*)i);
+        BOOST_CHECK_EQUAL(align_down((char*)i),(char*)i);        
+    }
+
+}
+
+#endif
+
+#endif
