@@ -17,8 +17,6 @@
 
 #include "debugprint.hpp"
 
-#include <boost/type_traits/alignment_traits.hpp>
-
 #include "myassert.h"
 //#include "os.hpp"
 
@@ -380,7 +378,7 @@ static const double EPSILON=FLOAT_EPSILON;
 static const double ONE_PLUS_EPSILON=1+EPSILON;
 
 //#define ONE_PLUS_EPSILON (1+EPSILON)
-#endif
+
 
 /*
   The simple solution like abs(f1-f2) <= e does not work for very small or very big values. This floating-point comparison algorithm is based on the more confident solution presented by Knuth in [1]. For a given floating point values u and v and a tolerance e:
@@ -490,71 +488,6 @@ finder<P> make_finder(const P& pred)
 
 
 
-template <class T>
-T *align(T *p)
-{
-    const unsigned align=boost::alignment_of<T>::value;
-    const unsigned align_mask=(align-1);
-
-    Assert2((align_mask & align), ==0); // only works for power-of-2 alignments.
-    char *cp=(char *)p;
-    cp += align-1;
-    cp -= (align_mask & (unsigned)cp);
-//    DBP4(sizeof(T),align,(void*)p,(void*)cp);
-    return (T*)cp;
-}
-
-template <class T>
-T *align_down(T *p)
-{
-    const unsigned align=boost::alignment_of<T>::value;
-    const unsigned align_mask=(align-1);
-//    DBP3(align,align_mask,align_mask & align);
-    //      unsigned & ttop(*(unsigned *)&p); //FIXME: do we need to warn compiler about aliasing here?
-//            ttop &= ~align_mask;
-    //return p;
-    Assert2((align_mask & align), == 0); // only works for power-of-2 alignments.
-    unsigned diff=align_mask & (unsigned)p; //= align-(ttop&align_mask)
-    return (T*)((char *)p - diff);
-}
-
-template <class T>
-bool is_aligned(T *p)
-{
-    //      unsigned & ttop(*(unsigned *)&p); //FIXME: do we need to warn compiler about aliasing here?
-    const unsigned align=boost::alignment_of<T>::value;
-    const unsigned align_mask=(align-1);
-    return !(align_mask & (unsigned)p);
-}
-
-
-#ifdef TEST
-#include "test.hpp"
-BOOST_AUTO_UNIT_TEST( TEST_FUNC_ALIGN )
-{
-    unsigned *p;
-    p=(unsigned *)0x15;
-    BOOST_CHECK_EQUAL(::align(p),(unsigned *)0x18);
-    BOOST_CHECK_EQUAL(::align_down(p),(unsigned *)0x14);
-    BOOST_CHECK(!is_aligned(p));
-
-    p=(unsigned *)0x16;
-    BOOST_CHECK_EQUAL(::align(p),(unsigned *)0x18);
-    BOOST_CHECK_EQUAL(::align_down(p),(unsigned *)0x14);
-    BOOST_CHECK(!is_aligned(p));
-
-    p=(unsigned *)0x17;
-    BOOST_CHECK_EQUAL(::align(p),(unsigned *)0x18);
-    BOOST_CHECK_EQUAL(::align_down(p),(unsigned *)0x14);
-    BOOST_CHECK(!is_aligned(p));
-
-    p=(unsigned *)0x28;
-    BOOST_CHECK_EQUAL(::align(p),p);
-    BOOST_CHECK_EQUAL(::align_down(p),p);
-    BOOST_CHECK(is_aligned(p));
-
-
-}
 
 #endif
 
@@ -1137,9 +1070,13 @@ struct indirect_gt {
 #endif
 
 #ifdef TEST
+
 BOOST_AUTO_UNIT_TEST( TEST_FUNCS )
 {
 }
-#endif
 
 #endif
+
+
+#endif
+
